Move and more cleaning on radixLinkAV

--- a/AV/Sorting/radixLinkAV.html
+++ b/AV/Sorting/radixLinkAV.html
@@ -3,7 +3,7 @@
 <head>
   <title>Radix Sort Linked Lists AV</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="radixLinked.css" type="text/css" />
+  <link rel="stylesheet" href="radixLinkAV.css" type="text/css" />
 </head>
 
 <body>
@@ -58,6 +58,6 @@
 <script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
-<script src="radixLinked.js"></script>
+<script src="radixLinkAV.js"></script>
 </body>
 </html>
