--- a/Exercises/Sorting/RadixsortPRO.html
+++ b/Exercises/Sorting/RadixsortPRO.html
@@ -17,6 +17,7 @@ Written by Gayathri Subramanian and Cliff Shaffer
   <script type="text/javascript" src="/MathJax/MathJax.js?config=default"></script>
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <style>
@@ -46,18 +47,20 @@ Written by Gayathri Subramanian and Cliff Shaffer
 
 <body>
 <script>
+"use strict";
 var
   jsav,           // The JSAV object
   arr_size,       // Full array size
   userInput,      // Boolean: Tells us if user ever did anything
-  arrdata = [],       // The array to be sorted; keep for reset
-  jsavInput,
-  jsavBins,
-  jsavLists = [],
-  empty = [],         // Dummy for empty data to reset bin array
+  arrdata = [],   // The array to be sorted; keep for reset
+  answer = [],    // Array that holds the correct order for the values
+  jsavInput,      // JSAV array of input values
+  jsavBins,       // JSAV array that serves as a point for user to click on bins
+  jsavLists = [], // The actual set of lists
+  empty = [],     // Dummy for empty data to reset bin array
   isSelected;     // Boolean: True iff user has already clicked an array element
 
-var blockHeight = 47;  // Width of an array element
+var blockHeight = 47;  // Width/height of an array or list element
 
 // Variables used to keep track of the index and array of the
 // currently selected element within click handler
@@ -77,27 +80,20 @@ var clickHandler = function (arr, index) {
   } else {
     // We should be setting the value into a bin
     if (arr !== jsavBins) { return; } // Wasn't in bin array
-    // Deselect the currently selected element
-console.log("List " + index + " has size " + jsavLists[index].size());
-    if (jsavLists[index].size() === 0) {
-console.log("Add first");
-      jsavLists[index].addFirst(jsavInput.value(ValueIndex));
-    } else {
-console.log("Add last");
-      jsavLists[index].addLast(jsavInput.value(ValueIndex));
-    }
+    // Move currently selected element from input array to selected bin
+    jsavLists[index].addLast(jsavInput.value(ValueIndex));
     jsavLists[index].layout({center: false});
     jsavInput.unhighlight(ValueIndex);
     arr.value(index, jsavInput.value(ValueIndex));
     jsavInput.value(ValueIndex, "");
     ValueIndex = -1;
-console.log("Got here");
   }
   userInput = true;
 };
 
 // function that creates and initialises the arrays
 function resetInit() {
+  var i;
   // Do initializations, both for initial use and reset
   userInput = false;
   ValueIndex = -1;
@@ -107,34 +103,65 @@ function resetInit() {
   jsavBins = jsav.ds.array(empty, {indexed: true, center: false,
                            layout: "vertical", top: 10, left: 200});
   jsavBins.click(function (index) { clickHandler(this, index); });
+  for (i = 0; i < 10; i++) {
+    jsavLists[i] = jsav.ds.list({top: (11 + i * 47), left: 260, nodegap: 30});
+    jsavLists[i].layout({center: false});
+  }
+  jsav.step();
 }
 
 // reset function definition
 var f_reset = function () {
   jsavInput.clear();
-//  DELETE ALL OF THE LISTS
+  for (var i = 0; i < 10; i++) {
+    jsavLists[i].clear();
+  }
   resetInit();
 };
 
 // function that initialise JSAV library
 var initJSAV = function (asize, qchoice) {
+  var i, j;
+  var shift = 1;
+  var temp = [];
   // Do all of the one-time initializations
   arr_size = asize;
   jsav = new JSAV($("#container"));
   arrdata = JSAV.utils.rand.numKeys(0, 999, arr_size);
-  for (i = 0; i < 10; i++) {
-    empty[i] = "";
-    jsavLists[i] = jsav.ds.list({top: (11 + i * 47), left: 260, nodegap: 30});
-  }
+  for (i = 0; i < 10; i++) { empty[i] = ""; }
   resetInit();
   // Set up handler for reset button
   $("#reset").click(function () { f_reset(); });
+  // Compute the answer
+  for (i = 0; i < 10; i++) {
+    temp[i] = [];
+  }
+  for (i = 0; i < qchoice; i++) { shift = shift * 10; }
+  for (i = 0; i < arr_size; i++) {
+    var a = Math.floor((arrdata[i] / shift) % 10);
+    temp[a][temp[a].length] = arrdata[i];
+  }
+  var curr = 0;
+  for (i = 0; i < 10; i++) {
+    for (j = 0; j < temp[i].length; j++) {
+      answer[curr++] = temp[i][j];
+    }
+  }
 };
 	
-// Check user's answer for correctness: User's array must match answer
+// Check user's answer for correctness
 function checkAnswer(arr_size) {
-  var i;
-//  WRITE THE TEST TO CHECK ANSWER
+  var i, j;
+  var curr = 0;
+  for (i = 0; i < 10; i++) {
+    for (j = 0; j < jsavLists[i].size(); j++) {
+      if (jsavLists[i].get(j).value() !== answer[curr++]) {
+        return false;
+      }
+    }
+  }
+console.log("curr is " + curr + ", arr_size is " + arr_size);
+  if (curr !== arr_size) { return false; }
   return true;
 }
 </script>
