Implemented module proficiency display, changed the radix sort AVs so they would be logged correctly

--- a/AV/Sorting/radixLinkAV.html
+++ b/AV/Sorting/radixLinkAV.html
@@ -16,32 +16,31 @@
   <form id="ssperform">
     <label for="arraysize">&nbsp;Array size:&nbsp;</label>
     <select id="arraysize">
-      <option value = 5>5</option>
-      <option value = 6>6</option>
-      <option value = 7>7</option>
-      <option selected value = 8>8</option>
-      <option value = 9>9</option>
-      <option value = 10>10</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option selected="selected" value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
     </select>
 
     <!-- Number of Digits -->
     <label for="digitsize">&nbsp;Digits:&nbsp;</label> 
     <select id="digitsize">
-      <option selected value = 2> 2 </option>
-      <option value = 1> 1 </option>
-      <option value = 2> 2 </option>
-      <option value = 3> 3 </option>
-      <option value = 4> 4 </option>
+      <option value="1"> 1 </option>
+      <option selected="selected" value="2"> 2 </option>
+      <option value="3"> 3 </option>
+      <option value="4"> 4 </option>
     </select>
     <p>
       <input type="button" id="run" name="run" value="Run" />
       <input type="button" id="reset" name="reset" value="Reset" />
       <label for="arrayValues">&nbsp;Array values:&nbsp;</label>
       <input size="65" name="arrayValues" id="arrayValues" type="text" 
-	     placeholder="Type space-separated values, or click 'run' to use random values" />
+         placeholder="Type space-separated values, or click 'run' to use random values" />
     </p>
   </form>
-  <div id="radixLinked_avc" class="avcontainer">
+  <div id="radixLinkAV_avc" class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline" readonly="readonly"></p>
@@ -58,6 +57,7 @@
 <script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
 <script src="../../lib/ODSA.js"></script>
+<script src="../opendsaAV.js"></script>
 <script src="radixLinkAV.js"></script>
 </body>
 </html>
