--- a/AV/Sorting/radixArrayAV.html
+++ b/AV/Sorting/radixArrayAV.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div id="container">
+<div id="container" style="height: 580px;">
   <input type="button" id="about" name="about" value="About" />
   <a id="settings" class="jsavsettings" href="#">Settings</a>
   <input type="button" id="help" name="help" value="Help" />
