--- a/Exercises/Development/HashingPseudoRandomProbePRO.html
+++ b/Exercises/Development/HashingPseudoRandomProbePRO.html
@@ -2,7 +2,7 @@
 <html data-require="math">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Hashing Linear Probing Proficiency Exercise</title>
+  <title>Hashing Pseudo-Random Probing Proficiency Exercise</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transform.light.js"></script>
@@ -12,6 +12,7 @@
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
+  <script src="HashingProbingPRO.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 
   <style>
@@ -31,6 +32,7 @@ var
   studentArr = [],  // A copy of the (internal) array at the start of the exercise for reset
   jsavArr,        // The array that the user manipulates (JSAV object)
   userInput,
+  permutation,
   currentKey;     // the value that is inserted
 
 // Click event handler on the array
@@ -47,74 +49,33 @@ var f_reset = function () {
   userInput = false;
 };
 
-var linearProbing = function(i) {
-  return i;
+var randomizePermutation = function() {
+  var tmp, rand1, rand2;
+  permutation = [];
+  // initialize permutation
+  for (var i = 0; i < arr_size; i++) {
+    permutation[i] = i;
+  }
+  // randomly swap values
+  for (i = 3 * arr_size; i--;) {
+    rand1 = JSAV.utils.rand.numKey(1, arr_size - 1);
+    rand2 = JSAV.utils.rand.numKey(1, arr_size - 1);
+    tmp = permutation[rand1];
+    permutation[rand1] = permutation[rand2];
+    permutation[rand2] = tmp;
+  }
+  return permutation;
 };
-var quadraticProbing = function(i) {
-  return i*i;
+
+var pseudoRandomProbing = function(i) {
+  return permutation[i];
 }
 
-// randomize input for linear&quadratic probing, probefunction should be one of the above
-var randomizeInputData = function(probeFunction) {
-  var tries = JSAV.utils.rand.numKey(0, 3), // how many indices are tried before success
-      valueMod = JSAV.utils.rand.numKey(0, arr_size), // which index to insert to
-      arr = [], // store the hashtable in this array
-      // correct position where the student needs to insert the input value
-      inputCorrectPosition = (valueMod + probeFunction(tries))%arr_size,
-      input,
-      val,
-      solutionArray,
-      reservedIndices = [inputCorrectPosition]; // for tracking which indices are in use
-  
-  arr.length = arr_size; // set the size of the array
-  
-  // randomize keys to the indices tested by the hash function; as many as we like the student
-  // to think about (see tries above)
-  for (var i = 0; i < tries; i++) {
-    val = JSAV.utils.rand.numKey(10, 99)*10 + (valueMod + probeFunction(i));
-    arr[val%arr_size] = val;
-    reservedIndices.push(val%arr_size); // make sure we don't overwrite this index
-  }
-
-  // randomize the input value for student
-  input = JSAV.utils.rand.numKey(10, 99)*10 + valueMod;
-
-  // add a random number of other data into the hashtable
-  for (i = 0, count = JSAV.utils.rand.numKey(3, Math.ceil(arr_size/2)); i < count; i++) {
-    val = JSAV.utils.rand.numKey(100, 999);
-    // make sure we don't put anything especially to the correct position
-    if (reservedIndices.indexOf(val%arr_size) === -1) {
-      arr[val%arr_size] = val;
-      reservedIndices.push(val%arr_size);
-    } else {
-      i--;
-    }
-  }
-  // replace undefined values with empty strings because jsavArr.value(..) returns 
-  // empty strings and this makes comparison easier
-  arr = $.map(arr, function(item, index) { return item || "";});
-
-  // create a duplicate for the solution and add the input to the array
-  solutionArray = arr.slice(0);
-  solutionArray[inputCorrectPosition] = input;
-
-  // return an array (TODO: this is a bit hacky solution...)
-  return [arr, input, solutionArray];
-};
-
 // Initialise the exercise
-var initJSAV = function(collisionResolution) {
+var initJSAV = function() {
   var randomData;
 
-  // randomize data based on the collisionResolution used
-  if (collisionResolution == 0) {
-    randomData = randomizeInputData(linearProbing);
-  } else if (collisionResolution == 1) {
-    randomData = randomizeInputData(quadraticProbing);
-  } else { /// Add more resolution solutions here
-    alert("Sorry, this collision resolution is not yet implemented. Only Linear&Quadratic Probing works, I'll use Linear now!");
-    randomData = randomizeInputData(linearProbing);
-  }
+  randomData = Hashing.randomizeInputData(pseudoRandomProbing, arr_size);
 
   // Get the correct solution
   solutionArr = randomData[2];
@@ -122,7 +83,8 @@ var initJSAV = function(collisionResolution) {
   // initialize JSAV and the JSAV array
   jsav = new JSAV("jsav");
   jsav.recorded();
-  jsavArr = jsav.ds.array(randomData[0], {indexed: true, center: false});
+  studentArr = randomData[0];
+  jsavArr = jsav.ds.array(studentArr, {indexed: true, center: false});
 
   // store the value student needs to insert
   currentKey = randomData[1];
@@ -150,17 +112,15 @@ var checkAnswer = function() {
 <div class="exercise">
 <div class="vars">                
       <var id="hashFunction">"h(k) = k  mod " + arr_size</var>
-      <var id="collisionResolution">randRange(0,2)</var>
-      <var id="secondHashFunction">"P(k,i) = (h(k)+i* h2(k) ) mod " + arr_size + ",  h2(k)=floor[2((k/10) mod (M/2))+1]"</var>
-      <var id="collisionMethod">["Linear probing","Quadratic Probing","Double Hashing"]</var>
-      <var id="JSAV">initJSAV(collisionResolution)</var>
+      <var id="permutation">randomizePermutation(arr_size)</var>
+      <var id="JSAV">initJSAV()</var>
     </div>
     <div class="problems">
       <div> <!-- Supresses answer box -->
         <p class="problem">
           Given the following hash table, with the hash function <var>hashFunction </var>
-          and handling collisions using <var>collisionMethod[collisionResolution]</var>.  
-          <var>(collisionResolution==2)? "Second hash function is: "+secondHashFunction:""</var>           
+          and handling collisions using Pseudo-Random Probing. Random permutation to use is
+          <var>permutation.join(' ') </var>.
         </p>          
         <p class="question"> 
           In which slot element <var>currentKey </var> should be inserted?
