Fixed wording in a MCQ. Cleared hints divs in KA exercises with no hints.

--- a/Exercises/Sorting/SortIntroMCQ3b.html
+++ b/Exercises/Sorting/SortIntroMCQ3b.html
@@ -15,7 +15,7 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Which of these are traditional measures for
+      <p class="question">Which of these is a traditional measure for
 	the cost of a sorting algorithm?</p>
       <div class="solution">
          <var>"The number of comparisons"</var>
