Add hashing material on hashing functions

--- a/Exercises/Sorting/SortAlgCompMCQ6.html
+++ b/Exercises/Sorting/SortAlgCompMCQ6.html
@@ -15,9 +15,10 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> What sorting technique gaurantees that
-	records with the same key value occur in the same order in the
-	sorted list as in the original unsorted list?</p>
+      <p class="question">What do we call the property of a sorting
+	algorithm that gaurantees that records with the same key value
+	occur in the same order in the sorted list as in the original,
+	unsorted list?</p>
       <div class="solution"><var>"Stable"</var></div>
       <ul class="choices">
 	<li><var>"Consistent"</var></li>
