--- a/Exercises/Sorting/SortAlgCompMCQ8.html
+++ b/Exercises/Sorting/SortAlgCompMCQ8.html
@@ -15,10 +15,10 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> It is not uncommon for someone to
-	accidently call sort on a file that is already sorted.
+      <p class="question">Consider what happens if someone
+	accidently calls sort on a file that is already sorted.
 	Which of the following sorting methods will be the most
-	effecient if the input is already in sorted order</p>
+	effecient if the input is already in sorted order.</p>
      <div class="solution"><var>"Insertion Sort"</var></div>
       <ul class="choices">
 	<li><var>"Bubble Sort"</var></li>
