--- a/AV/Sorting/Birthday.html
+++ b/AV/Sorting/Birthday.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8">
   <title>Birthday Problem Calculator</title>
   <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="Birthday.css" type="text/css" />
 </head>
 
@@ -38,10 +38,12 @@
   <script
     src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js">
   </script>
-  <script src="../JSAV/build/JSAV-min.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
   <script type="text/javascript"
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
+  <script src="../../lib/ODSA.js"></script>
+  <script src="../opendsaAV.js"></script>
   <script src="Birthday.js"></script>
 </body>
 </html>
