--- a/Exercises/Sorting/RadixSortMCQ5.html
+++ b/Exercises/Sorting/RadixSortMCQ5.html
@@ -16,8 +16,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">The worst-case cost for Radix Sort when
-      sorting <code>n</code> keys with keys in the range 0
-      to <code>r^3-1</code> is:</p>
+      sorting <code>n</code> keys with keys in the range 0 to <code>r^3-1</code> is:</p>
       <div class="solution"><var><code>\Theta(n)</code></var></div>
       <ul class="choices">
 	<li><var><code>\Theta(n \log n)</code></var></li>
