--- a/AV/Development/hash.html
+++ b/AV/Development/hash.html
@@ -3,7 +3,7 @@
 <head>
   <title>Hashing Visualization</title>
   <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 <style>
 
 #container {
@@ -162,8 +162,8 @@ form {
 <script
   src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
 </script>
-<script src="../JSAV/lib/jquery.transform.light.js"></script>
-<script src="../JSAV/build/JSAV-min.js"></script>
+<script src="../../JSAV/lib/jquery.transform.light.js"></script>
+<script src="../../JSAV/build/JSAV-min.js"></script>
 
 <script>
 
