Changed username link on module page to link to backend student_view

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -14,6 +14,7 @@
 {% block relbar2 %}{% endblock %}
 
 {% macro login() %}  
+<a id="username-link" style="float:right;color:red;margin:10px 0 auto; display: none" class="username-link" href="http://opendsa.cc.vt.edu/student_view/username" target="_blank"></a>
 <a id="logon" style="float:right;color:red;margin:10px 10px auto"  name="#login-box" class="login-window" href="#">Login</a>    
 <div id="login-box" class="login-popup">
   <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
