Added MCQs for Hashing functions, and new hash function visualizations

--- a/Exercises/Sorting/HashFuncMCQ2.html
+++ b/Exercises/Sorting/HashFuncMCQ2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Radix Sort Review Questions</title>
+  <title>Hash Function Question 2</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -12,11 +12,19 @@
 </head>
 
 <body>
-  <div class="exercise" data-name="RadixSortMCQ1" ></div>  
-  <div class="exercise" data-name="RadixSortMCQ2" ></div>
-  <div class="exercise" data-name="RadixSortMCQ3" ></div>  
-  <div class="exercise" data-name="RadixSortMCQ4" ></div>  
-  <div class="exercise" data-name="RadixSortMCQ5" ></div>  
-   <div class="exercise" data-name="RadixSortMCQbin" ></div>  
+  <div class="exercise">
+    <div class="problems">
+      <div id="problem-type-or-description">
+	<p class="question">The binning hash function makes use of:</p>
+	<div class="solution"><var>"The high order digits or bits in the key"</var></div>
+	<ul class="choices" data-none="true">
+	  <li><var> "The low order digits or bits in the key"</var></li>
+	  <li><var> "The middle digits or bits of the key" </var></li>
+	  <li><var> "All of the digits or bits in the key" </var></li>
+	</ul>
+      </div> 
+    </div>	 
+  </div>
+</div>
 </body>
 </html>
