Student page: removed extra columns and highlight in green earned points.

--- a/RST/source/student.html
+++ b/RST/source/student.html
@@ -86,7 +86,7 @@
 <script src="_static/opendsaMOD.js"></script>
 
 
-<div id="pointsBox"><span class="pointsTitleTxt">Show points</span></div>  
+<div id="pointsBox"><span class="pointsTitleTxt">Loading data...</span></div>  
 <table class="data"></table> 
 
 </body>
