Updated link on student page. Added support for more exercise types.

--- a/RST/source/student.html
+++ b/RST/source/student.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script class="jsbin" src="http://datatables.net/download/build/jquery.dataTables.nightly.js"></script>  
     <link rel="top" title="OpenDSA Sample eTextbook" href="#" />
     <link rel="next" title="1. Preface" href="Intro.html" /> 
   </head>
@@ -31,7 +32,7 @@
 
       <div class="header">
           
-<a id="username-link" style="float:right;color:red;margin:10px 0 auto; display: none" class="username-link" href="http://opendsa.cc.vt.edu/student_view/username" target="_blank"></a>
+<a id="username-link" style="float:right;color:red;margin:10px 0 auto; display: none" class="username-link" href="#" target="_blank"></a>
 <a id="logon" style="float:right;color:red;margin:10px 10px auto"  name="#login-box" class="login-window" href="#">Login</a>    
 <div id="login-box" class="login-popup">
   <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
@@ -87,7 +88,7 @@
 
 
 <div id="pointsBox"><span class="pointsTitleTxt">Loading data...</span></div>  
-<table class="data"></table> 
+<table class="data" id="example"></table> 
 
 </body>
 
