--- a/Exercises/Sorting/HashingLinearProbePRO.html
+++ b/Exercises/Sorting/HashingLinearProbePRO.html
@@ -98,7 +98,7 @@ var checkAnswer = function() {
           and handling collisions using Linear Probing.           
         </p>          
         <p class="question"> 
-          In which slot element <var>currentKey </var> should be inserted?
+          In which slot should the record with key value <var>currentKey </var> be inserted?
         </p>
         <input id="reset" type="button" value="Reset" />  
         <div id="jsav"></div>
