Add slideshow for linear probing by steps.

--- a/Exercises/Sorting/HashingLinearProbePRO.html
+++ b/Exercises/Sorting/HashingLinearProbePRO.html
@@ -94,11 +94,13 @@ var checkAnswer = function() {
     <div class="problems">
       <div> <!-- Supresses answer box -->
         <p class="problem">
-          Given the following hash table, with the hash function <var>hashFunction </var>
-          and handling collisions using Linear Probing.           
+          Given the following hash table, use hash
+          function <var>hashFunction</var> and handle collisions
+          using Linear Probing.
         </p>          
         <p class="question"> 
-          In which slot should the record with key value <var>currentKey </var> be inserted?
+          In which slot should the record with key
+          value <var>currentKey </var> be inserted?
         </p>
         <input id="reset" type="button" value="Reset" />  
         <div id="jsav"></div>
