--- a/Exercises/Sorting/HashingLinearStepProbePRO.html
+++ b/Exercises/Sorting/HashingLinearStepProbePRO.html
@@ -100,12 +100,14 @@ var checkAnswer = function() {
     <div class="problems">
       <div> <!-- Supresses answer box -->
         <p class="problem">
-          Given the following hash table, with the hash function <var>hashFunction </var>
-          and handling collisions using Linear Probing by Steps with probe function P(K, i) = 
+          Given the following hash table, use hash
+          function <var>hashFunction</var> and handle collisions
+          using Linear Probing by Steps with probe function P(K, i) =
           <var>probeStep</var>i.
         </p>          
         <p class="question"> 
-          In which slot element <var>currentKey </var> should be inserted?
+          In which slot should the record with key
+          value <var>currentKey </var> be inserted?
         </p>
         <input id="reset" type="button" value="Reset" />  
         <div id="jsav"></div>
