Add a slideshow for pseudorandom probing

--- a/Exercises/Sorting/HashingPseudoRandomProbePRO.html
+++ b/Exercises/Sorting/HashingPseudoRandomProbePRO.html
@@ -118,12 +118,14 @@ var checkAnswer = function() {
     <div class="problems">
       <div> <!-- Supresses answer box -->
         <p class="problem">
-          Given the following hash table, with the hash function <var>hashFunction </var>
-          and handling collisions using Pseudo-Random Probing. Random permutation to use is
+          Given the following hash table, use hash
+          function <var>hashFunction </var> and handle collisions
+          using pseudo-random probing. The random permutation to use is 
           <var>permutation.join(' ') </var>.
         </p>          
         <p class="question"> 
-          In which slot element <var>currentKey </var> should be inserted?
+          In which slot should the record with key
+          value <var>currentKey </var> be inserted?
         </p>
         <input id="reset" type="button" value="Reset" />  
         <div id="jsav"></div>
