--- a/Exercises/Sorting/HashingQuadraticProbePRO.html
+++ b/Exercises/Sorting/HashingQuadraticProbePRO.html
@@ -99,11 +99,13 @@ var checkAnswer = function() {
     <div class="problems">
       <div> <!-- Supresses answer box -->
         <p class="problem">
-          Given the following hash table, with the hash function <var>hashFunction </var>
-          and handling collisions using Quadratic Probing with probe function p(K, i) = i*i.
+          Given the following hash table, use hash
+          function <var>hashFunction </var> and handle collisions
+          using Quadratic Probing with probe function p(K, i) = i*i. 
         </p>          
         <p class="question"> 
-          In which slot element <var>currentKey </var> should be inserted?
+          In which slot should the record with key
+          value <var>currentKey </var> be inserted?
         </p>
         <input id="reset" type="button" value="Reset" />  
         <div id="jsav"></div>
