Fixed validation errors

--- a/AV/Sorting/MidSquare.html
+++ b/AV/Sorting/MidSquare.html
@@ -19,8 +19,8 @@
     </p>
     <p>
       <label>&nbsp;Key Value:&nbsp;</label>
-      <input name="keyvalue" type="number"/>
-      <input type="button" name="calculate" value="Calculate" />
+      <input id="keyvalue" name="keyvalue" type="number"/>
+      <input type="button" id="calculate" name="calculate" value="Calculate" />
     </p>
     <p class="output" ></p>
   </div>
