--- a/AV/Sorting/StringSfold.html
+++ b/AV/Sorting/StringSfold.html
@@ -17,8 +17,8 @@
     </p>
     <p>
       <label>&nbsp;Key Value:&nbsp;</label>
-      <input name="keyvalue" type="text"/>
-      <input type="button" name="calculate" value="Calculate" />
+      <input id="keyvalue" name="keyvalue" type="text"/>
+      <input type="button" id="calculate" name="calculate" value="Calculate" />
     </p>
     <p class="output" ></p>
   </div>
