Fixed more validation errors

--- a/RST/source/student.html
+++ b/RST/source/student.html
@@ -31,7 +31,7 @@
 
       <div class="header">
           
-<a id="username-link" style="float:right;color:red;margin:10px 0 auto; display: none" class="username-link" href="#" target="_blank"></a>
+<a id="username-link" style="float:right;color:red;margin:10px 0 auto; display: none" class="username-link" href="#"></a>
 <a id="logon" style="float:right;color:red;margin:10px 10px auto"  name="#login-box" class="login-window" href="#">Login</a>    
 <div id="login-box" class="login-popup">
   <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
