Add a chapter summary for hashing, and MCQs for deletion.

--- a/Exercises/Sorting/HashDelMCQ1.html
+++ b/Exercises/Sorting/HashDelMCQ1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Hashing Question: Open Hashing</title>
+  <title>Hash Deletion Question 1</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -15,15 +15,15 @@
   <div class="exercise">
     <div class="problems">
       <div id="problem-type-or-description">
-        <p class="question"> Which of the following is true of open hashing? </p>
-        <div class="solution"><var>"Records are stored on a list associated with a slot in the hash table"</var></div>
-	<ul class="choices" data-none="true">
-	  <li><var>"All records are stored directly within the hash table"</var></li>
-	  <li><var>"The algorithm running time is determined by probes of different table cells until an empty one is found"</var></li>
-        <li><var>"Records are stored on a list associated with a slot in the hash table"</var></li>
+	<p class="question">Which is true about deletion from a hash
+	table using tombstones?</p>
+	<div class="solution"><var>"It causes a slight increase in the average time to insert and search"</var></div>
+	<ul class="choices">
+	  <li><var> "It has no affect on the average time to insert and search"</var></li>
+	  <li><var> "It causes a slight decrease in the average time to insert and search" </var></li>
 	</ul>
       </div> 
-    </div>
+    </div>	 
   </div>
 </div>
 </body>
