--- a/Exercises/Sorting/HashDelMCQ4.html
+++ b/Exercises/Sorting/HashDelMCQ4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Hashing Question: Open Hashing</title>
+  <title>Hash Deletion Question 4</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -15,15 +15,16 @@
   <div class="exercise">
     <div class="problems">
       <div id="problem-type-or-description">
-        <p class="question"> Which of the following is true of open hashing? </p>
-        <div class="solution"><var>"Records are stored on a list associated with a slot in the hash table"</var></div>
-	<ul class="choices" data-none="true">
-	  <li><var>"All records are stored directly within the hash table"</var></li>
-	  <li><var>"The algorithm running time is determined by probes of different table cells until an empty one is found"</var></li>
-        <li><var>"Records are stored on a list associated with a slot in the hash table"</var></li>
+	<p class="question">(T or F) A problem with using tombstones
+	is that they take up slots the table that cannot be reused, so
+	that over time the effective table size shrinks.</p>
+	<div class="solution"><var>"False"</var></div>
+	<ul class="choices" data-category="true">
+	  <li><var> "True"</var></li>
+	  <li><var> "False" </var></li>
 	</ul>
       </div> 
-    </div>
+    </div>	 
   </div>
 </div>
 </body>
