--- a/AV/Sorting/HashingDeleteProficiency.html
+++ b/AV/Sorting/HashingDeleteProficiency.html
@@ -28,7 +28,9 @@
         <div class="jsavcanvas">
           <p class="instructLabel">Instructions:</p>
           <p class="instructions">
-            ...
+            The task is to insert and delete the given keys to/from the hashtable. To insert a key, click on the index
+            where the key should be inserted. To delete a key, click on all the indices the hashfunction would consider
+            when trying to find the correct position. Use simple mod hashfunction and linear probing for collision resolution.
           </p>
           <p align="center">
             <span class="jsavscore"></span>
