Add/fix some MCQs for hash functions

--- a/Exercises/Sorting/HashFuncMCQ7.html
+++ b/Exercises/Sorting/HashFuncMCQ7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Hash Deletion Question 4</title>
+  <title>Hash Function Question 7</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script type="text/javascript"
@@ -15,13 +15,13 @@
   <div class="exercise">
     <div class="problems">
       <div id="problem-type-or-description">
-	<p class="question">(T or F) A problem with using tombstones
-	is that they take up slots in the table that cannot be reused, so
-	that over time the effective table size shrinks.</p>
+	<p class="question">Open hashing has the advantage that it
+	can answer range queries or questions like what is the largest
+	key in the database.</p>
 	<div class="solution"><var>"False"</var></div>
 	<ul class="choices" data-category="true">
-	  <li><var> "True"</var></li>
-	  <li><var> "False" </var></li>
+          <li><var>"True"</var></li>
+          <li><var>"False"</var></li>
 	</ul>
       </div> 
     </div>	 
