--- a/Exercises/Sorting/HashFuncSumm.html
+++ b/Exercises/Sorting/HashFuncSumm.html
@@ -17,5 +17,7 @@
   <div class="exercise" data-name="HashFuncMCQ4"></div>
   <div class="exercise" data-name="HashFuncMCQ5"></div>
   <div class="exercise" data-name="HashFuncMCQ6"></div>
+  <div class="exercise" data-name="HashFuncMCQ6"></div>
+  <div class="exercise" data-name="HashFuncMCQdisk"></div>
 </body>
 </html>
