--- a/Exercises/Sorting/HashDelMCQ5.html
+++ b/Exercises/Sorting/HashDelMCQ5.html
@@ -16,7 +16,7 @@
     <div class="problems">
       <div id="problem-type-or-description">
 	<p class="question">(T or F) A problem with using tombstones
-	  is that they take up slots the table, so they slightly
+	  is that they take up slots in the table, so they slightly
 	  increase the search and insert time.</p>
 	<div class="solution"><var>"True"</var></div>
 	<ul class="choices" data-category="true">
