Implemented double hashing for hashAV

--- a/AV/Sorting/hashAV.html
+++ b/AV/Sorting/hashAV.html
@@ -53,6 +53,8 @@
           <option value="3">Linear Probing by Stepsize of 3</option>
           <option value="4">Pseudo-random Probing</option>
           <option value="5">Quadratic Probing</option>
+          <option value="6">Double Hashing (Prime)</option>
+          <option value="7">Double Hashing (Power-of-2)</option>
         </select>
 
         <!-- Array Size Dropdown -->
@@ -92,6 +94,10 @@
           <option value="1">0 - 99</option>
           <option value="2">0 - 999</option>
         </select>
+        <span id="mValue">
+          <label for="mValue">M-value:</label>
+          <input size="12" name="M" id="M" type="text" />
+        </span>
       </p>
     </form>
   </div>
