Remove permute from opendsaAV, minor changes in MCQs

--- a/Exercises/Sorting/BinsortMCQ2.html
+++ b/Exercises/Sorting/BinsortMCQ2.html
@@ -15,8 +15,8 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> A main disadvantage of first Binsort
-      algorithm shown in this module is: </p>
+      <p class="question">A main disadvantage of the first Binsort
+      algorithm shown in this module is:</p>
       <div class="solution"><var>It works only for a permutation of the
 numbers from 0 to <code>n-1</code></var></div>
       <ul class="choices">
