--- a/Exercises/Sorting/HeapsortMCQ3.html
+++ b/Exercises/Sorting/HeapsortMCQ3.html
@@ -15,10 +15,10 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> A main disadvantage of Heap sort is: </p>
-      <div class="solution"><var>" Is not stable(i.e. equal keys may not end up to be in the same bucket in the same order).Needs lots of auxiliary storage."</var></div>
+      <p class="question">A disadvantage of Heapsort is:</p>
+      <div class="solution"><var>"It is not stable (i.e. equal keys may not end up to be in the same bucket in the same order)."</var></div>
       <ul class="choices">
-	<li><var>"Needs lots of auxiliary storage."</var></li>
+	<li><var>"It needs a lot of auxiliary storage."</var></li>
 	<li><var>"Its Average case running time is O(N^2)."</var></li>
 	<li><var>"None of the above."</var></li>
       </ul>  
