Fixed a bug where ChapterSumm.html doesn't load RadixSortSumm.html correctly

--- a/Exercises/Sorting/RadixsortPRO.html
+++ b/Exercises/Sorting/RadixsortPRO.html
@@ -155,8 +155,9 @@ function checkAnswer(arr_size) {
       }
     }
   }
-console.log("curr is " + curr + ", arr_size is " + arr_size);
+  //console.log("curr is " + curr + ", arr_size is " + arr_size);
   if (curr !== arr_size) { return false; }
+  
   return true;
 }
 </script>
