Minor wording changes in exercises.

--- a/Exercises/Sorting/HeapsortMCQ3.html
+++ b/Exercises/Sorting/HeapsortMCQ3.html
@@ -20,7 +20,7 @@
       <ul class="choices">
 	<li><var>"It needs a lot of auxiliary storage."</var></li>
 	<li><var>"Its Average case running time is O(N^2)."</var></li>
-	<li><var>"None of the above."</var></li>
+	<li><var>"None of these answers."</var></li>
       </ul>  
     </div>
   </div>
