--- a/Exercises/Sorting/SelsortMCQwhen.html
+++ b/Exercises/Sorting/SelsortMCQwhen.html
@@ -23,7 +23,7 @@
       <ul class="choices">
 	<li><var>"Each component of the array requires a small amount of memory"</var></li>
 	<li><var>"The array has only a few elements out of place"</var></li>
-	<li><var>"None of the above"</var></li>	  	 
+	<li><var>"None of these answers"</var></li>	  	 
       </ul>
       <div class="hints">
 	<p>The big advantage of Selection Sort is that it keeps the
